correct references to css file and added overflow:scroll

--- a/docs/header/header_loggedin.css
+++ b/docs/header/header_loggedin.css
@@ -152,6 +152,7 @@ button:active {
     margin: 0;
     height: 100%;
     border-radius: 3px 0 0 3px;
+    overflow: scroll;
 }
 
 .drawer--overlay {
